# RD_HW_1

./: README.md  main.py  pyproject.toml  requirements.txt  urls.txt
results/: api.ipify.org
