[tool.poetry]
name = "rd-hw-1"
version = "0.1.0"
description = ""
authors = ["undefined <azmolwebautomation@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
